--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,5 +1,5 @@
 {{#each movies}}
-<h2>{{this.title}}tilte</h2>
+<h2>{{this.title}}</h2>
 <img src="{{this.image}}" alt="movie image"/>
  <a href="/movies/{{this._id}}">See more</a>
 {{/each}}
