--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,42 @@
 body {
-  padding: 50px;
+  margin: 0px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.cover {
+  background: url("/images/cinema.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+.cover h1 {
+  color: white;
+  font-size: 100px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 0px;
+  padding-top: 100px;
+  margin-left: 550px;
+}
+
+.cover button {
+  background-color: white;
+  border: none;
+  color: black;
+  border-radius: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  
 }
