--- a/views/movie-details.hbs
+++ b/views/movie-details.hbs
@@ -1,4 +1,4 @@
-
+<div class="movie-details">
 <h2>{{movies.title}}</h2>
 
 <h3>Director: {{movies.director}}</h3>
@@ -21,3 +21,4 @@
     
    
 </ul>
+</div>
