--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,3 +40,29 @@ a {
   left: 40%;
   
 }
+
+.movie-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.movie-card {
+  width: 30%; /* Adjust as needed */
+      background-color: #fff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin: 15px;
+      padding: 15px;
+      border-radius: 8px;
+      text-align: center;
+}
+
+.movie-details {
+  width: 30%; /* Adjust as needed */
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 15px;
+  padding: 15px;
+  border-radius: 8px;
+  text-align: center;
+}
