--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,5 +1,9 @@
+<div class="movie-list">
+    <div class="movie-card">
 {{#each movies}}
 <h2>{{this.title}}</h2>
 <img src="{{this.image}}" alt="movie image"/>
+<br>
  <a href="/movies/{{this._id}}">See more</a>
 {{/each}}
+</div>
